# PostgresTask

./: CMakeLists.txt  main.cpp
